Added Validation to app.js

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,92 +25,27 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Terry</h2>
+        <h2 class="card-title">T</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 22</li>
-            <li class="list-group-item">Email: <a href="mailto:33">33</a></li>
-            <li class="list-group-item">Office number: 44</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:@">@</a></li>
+            <li class="list-group-item">Office number: 11111111</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">44</h2>
+        <h2 class="card-title">e</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 55</li>
-            <li class="list-group-item">Email: <a href="mailto:66">66</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/77" target="_blank" rel="noopener noreferrer">77</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">55</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 66</li>
-            <li class="list-group-item">Email: <a href="mailto:44">44</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/55" target="_blank" rel="noopener noreferrer">55</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">55</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 44</li>
-            <li class="list-group-item">Email: <a href="mailto:33">33</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/22" target="_blank" rel="noopener noreferrer">22</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">55</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 66</li>
-            <li class="list-group-item">Email: <a href="mailto:77">77</a></li>
-            <li class="list-group-item">School: 88</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">55</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 44</li>
-            <li class="list-group-item">Email: <a href="mailto:33">33</a></li>
-            <li class="list-group-item">School: 22</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">66</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 77</li>
-            <li class="list-group-item">Email: <a href="mailto:88">88</a></li>
-            <li class="list-group-item">School: 99</li>
+            <li class="list-group-item">ID: 4</li>
+            <li class="list-group-item">Email: <a href="mailto:@">@</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/re%44d" target="_blank" rel="noopener noreferrer">re%44d</a></li>
         </ul>
     </div>
 </div>
