Created HTML file through the app

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,27 +25,66 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">T</h2>
+        <h2 class="card-title">Terry Moschos</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
             <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:@">@</a></li>
-            <li class="list-group-item">Office number: 11111111</li>
+            <li class="list-group-item">Email: <a href="mailto:T@gmail.com">T@gmail.com</a></li>
+            <li class="list-group-item">Office number: 86253523</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">e</h2>
+        <h2 class="card-title">harry stiles</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 4</li>
-            <li class="list-group-item">Email: <a href="mailto:@">@</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/re%44d" target="_blank" rel="noopener noreferrer">re%44d</a></li>
+            <li class="list-group-item">ID: 455</li>
+            <li class="list-group-item">Email: <a href="mailto:harry@gmail.com">harry@gmail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/harry567" target="_blank" rel="noopener noreferrer">harry567</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">nfon</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 899</li>
+            <li class="list-group-item">Email: <a href="mailto:r@.com">r@.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/hfi755" target="_blank" rel="noopener noreferrer">hfi755</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">bill baggin</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:bill@.com">bill@.com</a></li>
+            <li class="list-group-item">School: UofA</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header">
+        <h2 class="card-title">jfj</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item">ID: 54</li>
+            <li class="list-group-item">Email: <a href="mailto:@.com">@.com</a></li>
+            <li class="list-group-item">School: iii</li>
         </ul>
     </div>
 </div>
