Added some styling to the HTML

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -15,7 +15,7 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12 jumbotron mb-3 team-heading bg-primary text-white">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
@@ -24,67 +24,67 @@
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">Terry Moschos</h2>
+    <div class="card-header bg-success text-white">
+        <h2 class="card-title">terry</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1</li>
-            <li class="list-group-item">Email: <a href="mailto:T@gmail.com">T@gmail.com</a></li>
-            <li class="list-group-item">Office number: 86253523</li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">harry stiles</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 455</li>
-            <li class="list-group-item">Email: <a href="mailto:harry@gmail.com">harry@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/harry567" target="_blank" rel="noopener noreferrer">harry567</a></li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">nfon</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 899</li>
-            <li class="list-group-item">Email: <a href="mailto:r@.com">r@.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/hfi755" target="_blank" rel="noopener noreferrer">hfi755</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">bill baggin</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 2</li>
-            <li class="list-group-item">Email: <a href="mailto:bill@.com">bill@.com</a></li>
-            <li class="list-group-item">School: UofA</li>
-        </ul>
-    </div>
-</div>
-,<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">jfj</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: 54</li>
+            <li class="list-group-item bg-secondary text-white">ID: 88</li>
             <li class="list-group-item">Email: <a href="mailto:@.com">@.com</a></li>
-            <li class="list-group-item">School: iii</li>
+            <li class="list-group-item">Office number: 77887788</li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header bg-info text-white">
+        <h2 class="card-title">oedhfoh</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item bg-secondary text-white">ID: 654</li>
+            <li class="list-group-item">Email: <a href="mailto:@.com">@.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/kfkeb33" target="_blank" rel="noopener noreferrer">kfkeb33</a></li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header bg-info text-white">
+        <h2 class="card-title">fhwl</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item bg-secondary text-white">ID: 7788</li>
+            <li class="list-group-item">Email: <a href="mailto:@.com">@.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/ekfbfk" target="_blank" rel="noopener noreferrer">ekfbfk</a></li>
+        </ul>
+    </div>
+</div>
+<div class="card employee-card">
+    <div class="card-header bg-warning text-dark">
+        <h2 class="card-title">jj</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item bg-secondary text-white">ID: 889</li>
+            <li class="list-group-item">Email: <a href="mailto:@.com">@.com</a></li>
+            <li class="list-group-item">School: fbkd</li>
+        </ul>
+    </div>
+</div>
+,<div class="card employee-card">
+    <div class="card-header bg-warning text-dark">
+        <h2 class="card-title">kfke</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+    </div>
+    <div class="card-body">
+        <ul class="list-group">
+            <li class="list-group-item bg-secondary text-white">ID: 99</li>
+            <li class="list-group-item">Email: <a href="mailto:@.com">@.com</a></li>
+            <li class="list-group-item">School: fnknf</li>
         </ul>
     </div>
 </div>
